Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
             </p>
           </div>
         </div>
+        <div class="project itens-center">
+        <p>
+          Para maiores informações sobre os projetos acesse a aba de <a href="projetos.html">Projetos</a>
+       </p>
+      </div>
     </section>
     <footer class="itens-center">
       <div class="footer-social">
