--- a/projetos.html
+++ b/projetos.html
@@ -21,6 +21,11 @@
         <a href="projetos.html">Projetos</a>
       </div>
     </div>
+    <div class="project itens-center">
+      <p>
+        Para acessar o repositório deste site <a href="https://github.com/1-Vinto/csb-lpocgd">acesse aqui<a/>!!
+      </p>
+    </div>
     <section>
     <div class="project itens-center">
       <img
@@ -39,15 +44,15 @@
           1.0.2)<br />
           O timer tem tempo programável e a barra de progresso diminui conforme
           o tempo passa, o projeto foi efetuado em C++.
-          <br /><br />Os testes foram efetuados<a
+          <br /><br /><a
             class="button"
             href="https://www.tiktok.com/@1_vinto/video/7151820983073017094?is_copy_url=1&is_from_webapp=v1"
           >
-            Aqui</a
+            Confira aqui</a
           >
         </p>
-        </section>
       </div>
+    </section>
       <section>
       <div class="project itens-center">
           <img
@@ -59,17 +64,39 @@
             <h3 class="project-title">API cartas de MTG</h3>
           <p>
             É basciamente uma API que foi desenvolvida para controle e cadastro de Cartas, As cartas são incluídas por meio do método POST, podem ser editadas por meio do método PUT, deletadas por meio do método DELETE e é possível buscar as cartas por meio do método GET.<br/>
-            A API foi desenvolvida em Python utilizando Flask e TinyDB, as informações que são inseridas na API ficam salvas em um Json.<br /><br />Os códigos estão disponíveis<a
+            A API foi desenvolvida em Python utilizando Flask e TinyDB, as informações que são inseridas na API ficam salvas em um Json.<br /><br /><a
             class="button"
             href="https://github.com/1-Vinto/API-Cartas/tree/main"
           >
-            Aqui</a
+            Confira aqui</a
           >
           </p>
-        </section>
+        </div>
       </div>
-    </div>
-  </div>
+    </section>
+    <section>
+      <div class="project itens-center">
+          <img
+          class="project-image"
+          src="/images/projetos/js.png"
+          alt="imagem do projeto timer"
+        />
+        <div>
+            <h3 class="project-title">Estudos de Javascript</h3>
+          <p>
+            São as atividades propostas no curso de JS do Professor Gustavo Guanabara (Curso em Vídeo).
+          </p>
+          <p>
+            Alguns exemplos de projetos: site que muda de acordo com a hora do dia, analisador de algarismos, analisador de idade e etc<br /><br /><a
+            class="button"
+            href="https://github.com/1-Vinto/Atividades_Javascript"
+          >
+            Confira aqui</a
+          >
+          </p>
+        </div>
+      </div>
+    </section>
     <footer class="itens-center">
       <div class="footer-social">
         <a href="https://www.instagram.com/1_vinto/" target="_blank">
