--- a/sobre.html
+++ b/sobre.html
@@ -45,14 +45,14 @@
           cursando Engenharia da Computação! pretendo desenvolver projetos para
           facilitar as situações do cotidiano.<br />
           Meu interesse por desenvolvimento de tecnologia vem desde quando eu
-          era mais novo, mas comencei a me envolver na área quando fiz 15 anos
-          de idade. Comecei com o ensino médio técnico que foi onde consegui
-          minha base para programação e uma noção básica de redes de
-          computadores, logo após o técnico eu servi o Exército Brasileiro por 2
-          anos, onde fui auxiliar responsável pela seção de informática e
-          adquiri maior parte do conhecimento de redes, linux e cftv. Na época
-          comecei um tecnologo em Análise e Desenvolvimento de Sistemas do qual
-          eu desisti para seguir com Engenharia da Computação.
+          era mais novo, mas comecei a me envolver na área quando fiz 15 anos de
+          idade. Comecei com o ensino médio técnico que foi onde consegui minha
+          base para programação e uma noção básica de redes de computadores,
+          logo após o técnico eu servi o Exército Brasileiro por 2 anos, onde
+          fui auxiliar responsável pela seção de informática e adquiri maior
+          parte do conhecimento de redes, linux e cftv. Na época comecei um
+          tecnologo em Análise e Desenvolvimento de Sistemas do qual eu desisti
+          para seguir com Engenharia da Computação.
         </p>
       </section>
     </div>
